chore: I have updated some of the stying on the label page, and I have also corrected some responsive issues that it was having on smaller screen sizes

--- a/src/assets/creator.scss
+++ b/src/assets/creator.scss
@@ -199,10 +199,10 @@
   }
 
   #delete {
-    background-color: rgb(230, 62, 62);
+    background-color: $attention-color;
 
     &:hover {
-      background-color: rgb(145, 4, 4);
+      background-color: $warning-color;
     }
   }
 }
