--- a/src/assets/library.scss
+++ b/src/assets/library.scss
@@ -7,6 +7,8 @@ $font-color: white;
 $light-border: rgb(233, 230, 230);
 $dark-border: $secondary-color;
 $light-background: rgb(240, 240, 240);
+$attention-color: rgb(230, 62, 62);
+$warning-color: rgb(145, 4, 4);
 
 $login-search-background: linear-gradient(to bottom right, $hover-button, $secondary-color);
 
